--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -2,10 +2,21 @@
 font-family: 'Source Sans Pro', sans-serif; 
 #5865f2
 */
+@font-face {
+    font-family: ginto;
+    src: url("ABCGintoNord-Bold-Trial.woff2");
+    font-weight: 1200;
+  }
+  @font-face {
+    font-family: whitney;
+    src: url("whitney-medium.otf");
+    font-weight: 600;
+  }
 *{
     margin: 0;
     padding: 0;
-    font-family: 'Source Sans Pro', sans-serif;
+    font-weight: 600;
+    font-family: whitney;
 }
 .navbar{
     background-color: #4865ed;
@@ -18,12 +29,14 @@ font-family: 'Source Sans Pro', sans-serif;
 }
 
 .navbar-logo h4{
-    font-family: 'Istok Web', sans-serif;
-    font-weight: 800;
-    font-size: 20px;
+    font-family:ginto;
+    font-weight: 400;
+    font-size: 16px;
     color: white;
-    margin: 18px 50px;
+    margin: 21px 50px;
     justify-content: center;
+    letter-spacing: 1px;
+    line-height: 18px;
 }
 .navbar-logo{
     display: flex;
@@ -48,9 +61,11 @@ font-family: 'Source Sans Pro', sans-serif;
 .navbar-menu ul li a{
     color: white;
     text-decoration: none;
+    font-family: whitney;
     font-weight: 600;
+    line-height: 22px;
     letter-spacing: 0.5px;
-    font-size: 15px;
+    font-size: 16px;
 }
 .navbar-menu ul li a:hover{
     text-decoration: dotted;
@@ -71,6 +86,6 @@ font-family: 'Source Sans Pro', sans-serif;
     font-size: 15px;
 }
 .navbar-btn button:hover{
-    box-shadow:  0em 0.3em 0.3em 0em rgb(114, 112, 112);
+    box-shadow: 5px 5px 5px rgba(35, 39, 42, 0.2);;
     color: #5865f2;
 }
