--- a/src/components/Tech/tech.css
+++ b/src/components/Tech/tech.css
@@ -32,9 +32,11 @@
     margin-top: 20px;
 }
 .tech-img{
-    width: 100%;
-    height: 100%;
-    margin-top: 24px;
+    display: flex;
+    justify-content: center;
+}
+.tech-img img{
+    width: 85%;
+    margin: 24px auto 0 auto;
     object-position: center;
-    margin-left: 18%;
 }
