--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -86,6 +86,10 @@ font-family: 'Source Sans Pro', sans-serif;
     padding: 7px 15px;
     font-size: 15px;
 }
+.navbar-btn a{
+    text-decoration: none;
+    color: black;
+}
 .navbar-btn button:hover{
     box-shadow: 5px 5px 5px rgba(35, 39, 42, 0.2);;
     color: #5865f2;
